# SmokeDocker

./: README.md  create_smoke_test_script.py  pyproject.toml
spagft/adapter/: spagft_adapter.py
