[tool.poetry]
name = "smokedocker"
version = "0.1.0"
description = ""
authors = ["fengsh27 <shaohong.feng.78@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.13"
python-dotenv = "^1.0.1"
openai = "^1.51.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
